fixed grammar errors

--- a/experience.html
+++ b/experience.html
@@ -53,7 +53,7 @@
                         <p class="card-text"><strong>Python, JupyterLab, AWS, Jenkins, Containers, CloudBees, Bitbucket,
                                 Jira</strong></p>
                         <p class="card-text"> Pursuing an extended internship as a SDE containerizing and optimizing
-                            Jupyter Lab for accessing Morninfstar data. Previously worked as a summer intern.
+                            Jupyter Lab for accessing Morningstar data. Previously worked as a summer intern.
                             Worked on logging and storing usage analytics data in AWS Cloudwatch, Lambdas, S3, and
                             Postgres
                             by creating pipelines and created notebooks for visualization of the data.</p>
@@ -104,9 +104,9 @@
                         <ul>
                             <li>Actively grade and conduct exams, hold office hours to assist students.
                             </li>
-                            <li>Involved in building and review AWS Architectures built by students for projects</li>
+                            <li>Involved in building and reviewing AWS Architectures built by students for projects.</li>
                             <li>Gained experience in formal academic teaching and communicating complex technical
-                                concepts for students</li>
+                                concepts for students.</li>
                         </ul>
                         </p>
                     </div>
@@ -143,7 +143,7 @@
                             <li>One of the youngest recipients of the Accenture Celebrates Excellence award in the
                                 individual category.
                             </li>
-                            <li>Led a Python bootcamp to train a team of colleagues in basic Data Analysis using Python
+                            <li>Led a Python bootcamp to train a team of colleagues in basic Data Analysis.
                             </li>
                             <li>Built an end to end automated ticket assignment system using ML. Savings of 800 manual
                                 hours/week and reduction in triaging team head count.
@@ -185,10 +185,10 @@
                             <li>Inter-department interaction for requirements elicitation and application testing.
                             </li>
                             <li>Automation saved more than 600 manual hours/week. Eliminated human error in data
-                                collection</li>
-                            <li>Was nominated for impactful project award at Yokogawa Japan, during the internship
+                                collection.</li>
+                            <li>Was nominated for impactful project award at Yokogawa Japan, during the internship.
                             </li>
-                            <li>Mentored interns occasionally for the next couple of years on the project</li>
+                            <li>Mentored interns occasionally for the next couple of years on the project.</li>
                         </ul>
                         </p>
                     </div>
